# rust-newscli

./: Cargo.toml  README.md
src/: main.rs  news_api.rs  theme.rs
