[package]
name = "news-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.6.2"
dotenv = "0.15.0"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
# newsapi = { path = "./newsapi", features = ["async"] }
# termimad = "0.21.0"
# tokio = {version = "1.25.0", features = ["full"] }